opam-version: "1.2"
depends: [
  "jbuilder" {build}
  "alcotest" {test}
  "fmt"
  "angstrom"
  "re"
  "uri"
  "astring"
  "rresult"
  "ptime"
  "ppx_deriving"
  "gmap"
]

build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

maintainer: [
  "Stefanie Schirmer @linse"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/roburio/icalendar"
bug-reports: "https://github.com/roburio/icalendar/issues"
dev-repo: "https://github.com/roburio/icalendar.git"
