opam-version: "2.0"
maintainer: [
  "Stefanie Schirmer @linse"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/roburio/icalendar"
bug-reports: "https://github.com/roburio/icalendar/issues"
dev-repo: "git+https://github.com/roburio/icalendar.git"
tags: ["org:mirage" "org:robur"]
doc: "https://roburio.github.io/icalendar/"
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.3"}
  "alcotest" {with-test}
  "fmt"
  "angstrom" {>= "0.14.0"}
  "re"
  "uri"
  "ptime"
  "ppx_deriving"
  "gmap" {>= "0.3.0"}
]

synopsis: "A library to parse and print the iCalendar (RFC 5545) format"
description: """
Parse and print .ics files as specified in RFC 5545.
Supports recurrent events, but only to the day level of detail.
Does not support vJournal components.
"""
